--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.48.1",
+    "framer-motion": "^12.0.5",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-spinners": "^0.15.0",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@types/node": "^20",
